further problem fixing.
current problem:
  * PrettyPrinting: Unbalanced...Exception
  * `assignment_read_attribute` with `length` results into wrong term