@@ -4,6 +4,7 @@
 package de.uka.ilkd.key.util.pp;
 
 import java.util.ArrayList;
+import java.util.NoSuchElementException;
 
 /**
  * The intermediate layer of the pretty printing library. Using the block size information provided
@@ -150,9 +151,10 @@ class Printer<M> {
     /** return the topmost element of the space stack without popping it. */
     private int top() {
         try {
-            return marginStack.get(marginStack.size() - 1);
-        } catch (IndexOutOfBoundsException e) {
-            throw new UnbalancedBlocksException();
+            return marginStack.getLast();
+        } catch (NoSuchElementException e) {
+            return 0;
+            //throw new UnbalancedBlocksException();
         }
     }
 
